--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ô MAM'S | Montpellier Burger</title>
+    <title>Ô MAM'S | Carte Officielle</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -48,7 +48,7 @@
         .card:hover .card-img img { transform: scale(1.1); }
 
         .card-info { padding: 1.5rem; }
-        .card-info h3 { font-size: 1.2rem; color: var(--primary); margin-bottom: 1rem; font-weight: 800; }
+        .card-info h3 { font-size: 1.1rem; color: var(--primary); margin-bottom: 1rem; font-weight: 800; text-transform: uppercase; }
         .price-row { display: flex; justify-content: space-between; align-items: center; }
         .price { font-size: 1.4rem; font-weight: 900; }
         
@@ -72,8 +72,8 @@
 
     <section class="hero">
         <div>
-            <h1>LA CARTE<br><span>OFFICIELLE</span></h1>
-            <p>Le meilleur de Montpellier dans votre assiette.</p>
+            <h1>LA CARTE<br><span>Ô MAM'S</span></h1>
+            <p>Qualité premium, prix imbattables.</p>
         </div>
     </section>
 
@@ -89,14 +89,14 @@
 
     <script>
         const burgers = [
-            { name: "Cheese Burger", price: "4,00€", img: "burger-1.jpg" },
-            { name: "Double Cheese Burger", price: "5,50€", img: "burger-2.jpg" },
-            { name: "Triple Cheese Burger", price: "7,00€", img: "burger-3.jpg" },
-            { name: "Le Big", price: "6,50€", img: "burger-4.jpg" },
-            { name: "Le Giant Maax", price: "12,90€", img: "burger-5.jpg" },
-            { name: "Le Giant", price: "9,50€", img: "burger-6.jpg" },
-            { name: "Le 180", price: "10,90€", img: "burger-7.jpg" },
-            { name: "Le 360", price: "14,90€", img: "burger-8.jpg" }
+            { name: "Cheese Burger", price: "3,50€", img: "burger-1.jpg" },
+            { name: "Double Cheese Burger", price: "4,50€", img: "burger-2.jpg" },
+            { name: "Triple Cheese Burger", price: "5,50€", img: "burger-3.jpg" },
+            { name: "Le Big", price: "6€", img: "burger-4.jpg" },
+            { name: "Le Giant Maax", price: "6€", img: "burger-5.jpg" },
+            { name: "Le Giant", price: "5€", img: "burger-6.jpg" },
+            { name: "Le 180", price: "7€", img: "burger-7.jpg" },
+            { name: "Le 360", price: "9€", img: "burger-8.jpg" }
         ];
 
         const grid = document.getElementById('burger-grid');
