--- a/index.html
+++ b/index.html
@@ -3,184 +3,153 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ô MAM'S | Burgers Gourmets Montpellier</title>
+    <title>Ô MAM'S | L'Art du Burger par deux Frères</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        :root { --primary: #82c91e; --dark: #000; --card-bg: #111; --white: #fff; }
+        :root { --primary: #82c91e; --dark: #0b0b0b; --card-bg: #1a1a1a; --white: #fff; }
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: 'Montserrat', sans-serif; background: var(--dark); color: var(--white); scroll-behavior: smooth; padding-bottom: 60px; }
+        body { font-family: 'Montserrat', sans-serif; background: var(--dark); color: var(--white); scroll-behavior: smooth; display: flex; }
 
-        /* HEADER */
-        header {
-            display: flex; justify-content: space-between; align-items: center;
-            padding: 1rem 5%; background: rgba(0,0,0,0.95);
-            position: sticky; top: 0; z-index: 1000; border-bottom: 1px solid #222;
+        /* NAVIGATION À GAUCHE */
+        nav {
+            width: 280px; height: 100vh; background: #000; position: fixed; 
+            left: 0; top: 0; padding: 2rem; border-right: 1px solid #222;
+            display: flex; flex-direction: column; z-index: 1000;
         }
-        .logo-img { height: 75px; width: auto; }
-        .header-actions { display: flex; align-items: center; gap: 15px; }
-        .btn-call { background: var(--primary); color: #000; text-decoration: none; padding: 10px 15px; border-radius: 50px; font-weight: 900; font-size: 0.9rem; }
-
-        /* HERO */
-        .hero {
-            height: 40vh; display: flex; align-items: center; padding: 0 8%;
-            background: linear-gradient(to right, rgba(0,0,0,0.9), rgba(0,0,0,0.4)), url('images/burger-7.jpg');
-            background-size: cover; background-position: center;
+        .nav-logo { width: 100%; margin-bottom: 3rem; }
+        .nav-links { list-style: none; flex-grow: 1; }
+        .nav-links li { margin-bottom: 1.5rem; }
+        .nav-links a { 
+            color: #888; text-decoration: none; font-weight: 700; font-size: 1.1rem;
+            transition: 0.3s; display: flex; align-items: center; gap: 15px;
         }
-        .hero h1 { font-size: 3rem; font-weight: 900; text-transform: uppercase; line-height: 1; }
-        .hero span { color: var(--primary); }
-
-        /* MENU */
-        .section-title { text-align: center; margin: 4rem 0 2rem; text-transform: uppercase; letter-spacing: 2px; }
-        .section-title h2 { font-size: 2rem; }
-        .section-title div { width: 50px; height: 3px; background: var(--primary); margin: 10px auto; }
+        .nav-links a:hover, .nav-links a.active { color: var(--primary); }
         
-        .menu-container { padding: 0 5% 4rem; }
+        .btn-nav-call {
+            background: var(--primary); color: #000; text-decoration: none;
+            padding: 15px; border-radius: 12px; font-weight: 900; text-align: center;
+            display: flex; align-items: center; justify-content: center; gap: 10px;
+        }
+
+        /* CONTENU PRINCIPAL */
+        main { margin-left: 280px; width: calc(100% - 280px); padding: 0; }
+
+        section { padding: 6rem 8%; border-bottom: 1px solid #111; }
+        .section-title { margin-bottom: 3rem; }
+        .section-title h2 { font-size: 2.5rem; text-transform: uppercase; font-weight: 900; }
+        .section-title div { width: 60px; height: 4px; background: var(--primary); margin-top: 10px; }
+
+        /* QUI SOMMES-NOUS */
+        .about-content { display: flex; gap: 40px; align-items: center; }
+        .about-text { font-size: 1.1rem; line-height: 1.8; color: #ccc; }
+        .about-text b { color: var(--primary); }
+
+        /* MENU GRID */
         .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 25px; }
-        .card { background: var(--card-bg); border-radius: 20px; overflow: hidden; border: 1px solid #222; }
-        .card-img { height: 220px; overflow: hidden; }
+        .card { background: var(--card-bg); border-radius: 20px; overflow: hidden; transition: 0.4s; border: 1px solid #222; }
+        .card:hover { border-color: var(--primary); transform: translateY(-5px); }
+        .card-img { height: 200px; background: #000; }
         .card-img img { width: 100%; height: 100%; object-fit: cover; }
         .card-info { padding: 1.5rem; }
-        .card-info h3 { color: var(--primary); margin-bottom: 1rem; text-transform: uppercase; }
+        .card-info h3 { font-size: 1rem; margin-bottom: 1rem; color: var(--primary); }
         .price-row { display: flex; justify-content: space-between; align-items: center; }
-        .price { font-size: 1.4rem; font-weight: 900; }
-        .add-btn { background: var(--primary); border: none; width: 40px; height: 40px; border-radius: 10px; cursor: pointer; }
+        .price { font-size: 1.3rem; font-weight: 900; }
 
-        /* AVIS */
-        .reviews-container { padding: 4rem 5%; background: #080808; }
-        .review-card { background: #111; padding: 2rem; border-radius: 15px; margin-bottom: 20px; border-left: 4px solid var(--primary); }
-        .stars { color: #ffc107; margin-bottom: 10px; }
-        .review-text { font-style: italic; color: #ccc; line-height: 1.6; }
-        .review-author { margin-top: 15px; font-weight: 700; color: var(--white); font-size: 0.9rem; }
-
-        /* INFOS & MAPS */
-        .info-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 2px; background: #222; }
-        .info-block { background: var(--dark); padding: 3rem 5%; }
-        .hours-list { list-style: none; margin-top: 20px; }
-        .hours-list li { display: flex; justify-content: space-between; padding: 8px 0; border-bottom: 1px solid #111; font-size: 0.9rem; }
-        .current-day { color: var(--primary); font-weight: 700; }
-
-        .map-iframe { width: 100%; height: 100%; min-height: 400px; border: none; filter: grayscale(1) invert(1); }
-
-        /* MOBILE FIXES */
-        .mobile-call-bar {
-            position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%);
-            width: 90%; background: var(--primary); padding: 15px; border-radius: 15px;
-            text-align: center; z-index: 2000; color: #000; font-weight: 900; text-decoration: none; display: none;
-        }
-
-        @media (max-width: 768px) {
-            .info-grid { grid-template-columns: 1fr; }
-            .mobile-call-bar { display: block; }
-            .header-actions .btn-call { display: none; }
-            .hero h1 { font-size: 2.2rem; }
+        /* RESPONSIVE */
+        @media (max-width: 1024px) {
+            body { flex-direction: column; }
+            nav { width: 100%; height: auto; position: relative; border-right: none; border-bottom: 1px solid #222; padding: 1rem; }
+            .nav-logo { height: 50px; width: auto; margin-bottom: 1rem; }
+            .nav-links { display: flex; gap: 15px; margin-bottom: 1rem; overflow-x: auto; padding-bottom: 10px; }
+            .nav-links li { margin-bottom: 0; flex-shrink: 0; }
+            main { margin-left: 0; width: 100%; }
+            section { padding: 3rem 5%; }
         }
     </style>
 </head>
 <body>
 
-    <header>
-        <img src="images/logo-mams.pnj.jpg" alt="Logo Ô MAM'S" class="logo-img">
-        <div class="header-actions">
-            <a href="tel:0745065470" class="btn-call"><i class="fas fa-phone"></i> 07 45 06 54 70</a>
-            <div class="cart-wrapper" id="cart" style="position:relative;">
-                <i class="fas fa-shopping-basket" style="font-size: 1.5rem;"></i>
-                <span id="count" style="position:absolute; top:-10px; right:-10px; background:var(--primary); color:#000; border-radius:50%; width:20px; height:20px; display:flex; align-items:center; justify-content:center; font-size:0.7rem; font-weight:900;">0</span>
+    <nav>
+        <img src="images/logo-mams.pnj.jpg" alt="Ô MAM'S" class="nav-logo">
+        <ul class="nav-links">
+            <li><a href="#about"><i class="fas fa-users"></i> Qui sommes-nous ?</a></li>
+            <li><a href="#menu"><i class="fas fa-utensils"></i> La Carte</a></li>
+            <li><a href="#order"><i class="fas fa-phone-alt"></i> Commander</a></li>
+        </ul>
+        <a href="tel:0745065470" class="btn-nav-call">
+            <i class="fas fa-phone-alt"></i> 07 45 06 54 70
+        </a>
+    </nav>
+
+    <main>
+        <section id="about">
+            <div class="section-title">
+                <h2>Qui <span>sommes-nous ?</span></h2>
+                <div></div>
             </div>
-        </div>
-    </header>
+            <div class="about-content">
+                <div class="about-text">
+                    <p>L'histoire d'<b>Ô MAM'S</b>, c'est avant tout l'histoire de <b>deux frères</b> unis par une passion dévorante pour la <b>street-food authentique</b>. </p><br>
+                    <p>Après avoir parcouru les meilleures adresses, nous avons décidé de poser nos valises à Montpellier pour créer le lieu dont nous rêvions : un fast-food où la <b>qualité bouchère</b> rencontre l'esprit de famille. [cite: 77]</p><br>
+                    <p>Chez nous, pas de compromis. Chaque burger est pensé, goûté et validé par la fratrie. Nous travaillons des produits frais pour vous offrir une expérience généreuse, comme à la maison, mais avec le savoir-faire de l'élite du burger.</p>
+                </div>
+            </div>
+        </section>
 
-    <a href="tel:0745065470" class="mobile-call-bar"><i class="fas fa-phone"></i> APPELER POUR COMMANDER</a>
+        <section id="order" style="background: #080808;">
+            <div class="section-title">
+                <h2>Commander</h2>
+                <div></div>
+            </div>
+            <p style="font-size: 1.2rem; margin-bottom: 2rem;">📞 Un petit creux ? Appelez-nous directement pour une préparation immédiate :</p>
+            <a href="tel:0745065470" style="font-size: 2.5rem; color: var(--primary); text-decoration: none; font-weight: 900;">
+                07 45 06 54 70 
+            </a>
+            <p style="margin-top: 2rem; color: #666;">📍 Livraison gratuite 7j/7 avec un minimum d'achat. [cite: 64]</p>
+        </section>
 
-    <section class="hero">
-        <div>
-            <h1>BURGERS<br><span>GOURMETS</span></h1>
-            <p>Le goût de la passion à Montpellier.</p>
-        </div>
-    </section>
+        <section id="menu">
+            <div class="section-title">
+                <h2>Notre <span>Carte</span></h2>
+                <div></div>
+            </div>
+            <div class="grid" id="burger-grid">
+                </div>
+        </section>
 
-    <div class="section-title">
-        <h2>Notre Carte</h2>
-        <div></div>
-    </div>
-
-    <main class="menu-container">
-        <div class="grid" id="burger-grid"></div>
+        <footer style="padding: 4rem 8%; text-align: center; color: #444; font-size: 0.8rem;">
+            <p>90 RUE DES BOUISSES, 34070 MONTPELLIER [cite: 77]</p>
+            <p>© 2026 Ô MAM'S - TOUS DROITS RÉSERVÉS</p>
+        </footer>
     </main>
 
-    <section class="reviews-container">
-        <div class="section-title">
-            <h2>Avis Clients</h2>
-            <p style="color:var(--primary); font-weight:700;">4.9/5 sur Google Maps</p>
-            <div></div>
-        </div>
-        <div class="review-card">
-            <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
-            <p class="review-text">"Excellent burgers, produits frais et de qualité. Le personnel est super accueillant. Je recommande les yeux fermés !"</p>
-            <p class="review-author">- Client Satisfait (Google)</p>
-        </div>
-        <div class="review-card">
-            <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
-            <p class="review-text">"Le meilleur smash burger du quartier. Les prix sont très corrects pour la qualité proposée."</p>
-            <p class="review-author">- Gourmet Montpellier (Google)</p>
-        </div>
-    </section>
-
-    <section class="info-grid">
-        <div class="info-block">
-            <h3>Horaires</h3>
-            <ul class="hours-list">
-                <li><span>Lundi - Jeudi</span> <span>11:00-14:30, 18:00-22:00</span></li>
-                <li><span>Vendredi</span> <span>18:00-23:00</span></li>
-                <li><span>Samedi</span> <span>12:00-14:30, 18:00-23:00</span></li>
-                <li><span>Dimanche</span> <span>12:00-14:30, 18:00-22:00</span></li>
-            </ul>
-            <p style="margin-top:30px; font-weight:900;"><i class="fas fa-map-marker-alt" style="color:var(--primary);"></i> 90 RUE DES BOUISSES, 34070</p>
-        </div>
-        <div style="height: 100%; min-height: 400px;">
-            <iframe class="map-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2889.332349074811!2d3.8341272765691176!3d43.59655135650204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12b6af0ec6c6f325%3A0xef286ccd503d4e41!2sO%20MAM&#39;S!5e0!3m2!1sfr!2sfr!4v1700000000000!5m2!1sfr!2sfr" allowfullscreen="" loading="lazy"></iframe>
-        </div>
-    </section>
-
-    <footer style="padding:3rem; text-align:center; background:#000;">
-        <img src="images/logo-mams.pnj.jpg" alt="Logo" style="height:50px; opacity:0.5;">
-        <p style="font-size:0.7rem; color:#333; margin-top:20px;">© 2026 Ô MAM'S MONTPELLIER</p>
-    </footer>
-
     <script>
-        const burgers = [
+        // ICI ON METTRA LA LISTE QUE TU VAS ME DONNER
+        const menuComplet = [
             { name: "Cheese Burger", price: "3,50€", img: "burger-1.jpg" },
-            { name: "Double Cheese Burger", price: "4,50€", img: "burger-2.jpg" },
-            { name: "Triple Cheese Burger", price: "5,50€", img: "burger-3.jpg" },
-            { name: "Le Big", price: "6€", img: "burger-4.jpg" },
-            { name: "Le Giant Maax", price: "6€", img: "burger-5.jpg" },
-            { name: "Le Giant", price: "5€", img: "burger-6.jpg" },
-            { name: "Le 180", price: "7€", img: "burger-7.jpg" },
-            { name: "Le 360", price: "9€", img: "burger-8.jpg" }
+            { name: "Double Cheese", price: "4,50€", img: "burger-2.jpg" },
+            { name: "Triple Cheese", price: "5,50€", img: "burger-3.jpg" },
+            { name: "Le Big", price: "6,00€", img: "burger-4.jpg" },
+            { name: "Giant Maax", price: "6,00€", img: "burger-5.jpg" },
+            { name: "Le Giant", price: "5,00€", img: "burger-6.jpg" },
+            { name: "Le 180", price: "7,00€", img: "burger-7.jpg" },
+            { name: "Le 360", price: "9,00€", img: "burger-8.jpg" }
         ];
 
         const grid = document.getElementById('burger-grid');
-        grid.innerHTML = burgers.map(b => `
+        grid.innerHTML = menuComplet.map(item => `
             <div class="card">
-                <div class="card-img"><img src="images/${b.img}" alt="${b.name}"></div>
+                <div class="card-img"><img src="images/${item.img}" alt="${item.name}"></div>
                 <div class="card-info">
-                    <h3>${b.name}</h3>
+                    <h3>${item.name}</h3>
                     <div class="price-row">
-                        <span class="price">${b.price}</span>
-                        <button class="add-btn" onclick="addToCart()"><i class="fas fa-plus"></i></button>
+                        <span class="price">${item.price}</span>
+                        <div style="background:var(--primary); color:#000; padding:5px 10px; border-radius:5px; font-weight:bold; font-size:0.8rem;">VOIR</div>
                     </div>
                 </div>
             </div>
         `).join('');
-
-        let count = 0;
-        function addToCart() {
-            count++;
-            document.getElementById('count').innerText = count;
-            const cart = document.getElementById('cart');
-            cart.style.transform = "scale(1.2)";
-            setTimeout(() => { cart.style.transform = "scale(1)"; }, 100);
-        }
     </script>
 </body>
 </html>
