--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ô MAM'S | L'Art du Burger par deux Frères</title>
+    <title>Ô MAM'S | Burgers & Street Food Montpellier</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -17,14 +17,14 @@
             left: 0; top: 0; padding: 2rem; border-right: 1px solid #222;
             display: flex; flex-direction: column; z-index: 1000;
         }
-        .nav-logo { width: 100%; margin-bottom: 3rem; }
+        .nav-logo { width: 100%; margin-bottom: 2rem; border-radius: 10px; }
         .nav-links { list-style: none; flex-grow: 1; }
-        .nav-links li { margin-bottom: 1.5rem; }
+        .nav-links li { margin-bottom: 1.2rem; }
         .nav-links a { 
-            color: #888; text-decoration: none; font-weight: 700; font-size: 1.1rem;
-            transition: 0.3s; display: flex; align-items: center; gap: 15px;
+            color: #888; text-decoration: none; font-weight: 700; font-size: 1rem;
+            transition: 0.3s; display: flex; align-items: center; gap: 12px;
         }
-        .nav-links a:hover, .nav-links a.active { color: var(--primary); }
+        .nav-links a:hover { color: var(--primary); }
         
         .btn-nav-call {
             background: var(--primary); color: #000; text-decoration: none;
@@ -33,36 +33,32 @@
         }
 
         /* CONTENU PRINCIPAL */
-        main { margin-left: 280px; width: calc(100% - 280px); padding: 0; }
+        main { margin-left: 280px; width: calc(100% - 280px); }
 
-        section { padding: 6rem 8%; border-bottom: 1px solid #111; }
+        section { padding: 5rem 8%; border-bottom: 1px solid #111; }
         .section-title { margin-bottom: 3rem; }
-        .section-title h2 { font-size: 2.5rem; text-transform: uppercase; font-weight: 900; }
+        .section-title h2 { font-size: 2.2rem; text-transform: uppercase; font-weight: 900; color: var(--white); }
+        .section-title span { color: var(--primary); }
         .section-title div { width: 60px; height: 4px; background: var(--primary); margin-top: 10px; }
 
-        /* QUI SOMMES-NOUS */
-        .about-content { display: flex; gap: 40px; align-items: center; }
-        .about-text { font-size: 1.1rem; line-height: 1.8; color: #ccc; }
-        .about-text b { color: var(--primary); }
-
-        /* MENU GRID */
-        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 25px; }
-        .card { background: var(--card-bg); border-radius: 20px; overflow: hidden; transition: 0.4s; border: 1px solid #222; }
+        /* MENU CATEGORIES */
+        .cat-title { font-size: 1.5rem; color: var(--primary); margin: 2rem 0 1.5rem; text-transform: uppercase; font-weight: 900; border-left: 4px solid var(--primary); padding-left: 15px; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(240px, 1fr)); gap: 20px; margin-bottom: 3rem; }
+        
+        .card { background: var(--card-bg); border-radius: 15px; overflow: hidden; border: 1px solid #222; transition: 0.3s; }
         .card:hover { border-color: var(--primary); transform: translateY(-5px); }
-        .card-img { height: 200px; background: #000; }
+        .card-img { height: 160px; background: #000; }
         .card-img img { width: 100%; height: 100%; object-fit: cover; }
-        .card-info { padding: 1.5rem; }
-        .card-info h3 { font-size: 1rem; margin-bottom: 1rem; color: var(--primary); }
-        .price-row { display: flex; justify-content: space-between; align-items: center; }
-        .price { font-size: 1.3rem; font-weight: 900; }
+        .card-info { padding: 1.2rem; }
+        .card-info h3 { font-size: 0.95rem; margin-bottom: 0.5rem; text-transform: uppercase; }
+        .price { font-size: 1.2rem; font-weight: 900; color: var(--white); }
 
         /* RESPONSIVE */
         @media (max-width: 1024px) {
             body { flex-direction: column; }
-            nav { width: 100%; height: auto; position: relative; border-right: none; border-bottom: 1px solid #222; padding: 1rem; }
-            .nav-logo { height: 50px; width: auto; margin-bottom: 1rem; }
-            .nav-links { display: flex; gap: 15px; margin-bottom: 1rem; overflow-x: auto; padding-bottom: 10px; }
-            .nav-links li { margin-bottom: 0; flex-shrink: 0; }
+            nav { width: 100%; height: auto; position: sticky; border-right: none; border-bottom: 1px solid #222; padding: 1rem; }
+            .nav-logo { height: 60px; width: auto; margin-bottom: 1rem; }
+            .nav-links { display: none; }
             main { margin-left: 0; width: 100%; }
             section { padding: 3rem 5%; }
         }
@@ -88,25 +84,22 @@
                 <h2>Qui <span>sommes-nous ?</span></h2>
                 <div></div>
             </div>
-            <div class="about-content">
-                <div class="about-text">
-                    <p>L'histoire d'<b>Ô MAM'S</b>, c'est avant tout l'histoire de <b>deux frères</b> unis par une passion dévorante pour la <b>street-food authentique</b>. </p><br>
-                    <p>Après avoir parcouru les meilleures adresses, nous avons décidé de poser nos valises à Montpellier pour créer le lieu dont nous rêvions : un fast-food où la <b>qualité bouchère</b> rencontre l'esprit de famille. [cite: 77]</p><br>
-                    <p>Chez nous, pas de compromis. Chaque burger est pensé, goûté et validé par la fratrie. Nous travaillons des produits frais pour vous offrir une expérience généreuse, comme à la maison, mais avec le savoir-faire de l'élite du burger.</p>
-                </div>
-            </div>
+            <p style="font-size: 1.1rem; line-height: 1.8; color: #ccc;">
+                L'aventure <b>Ô MAM'S</b> est née de la complicité de <b>deux frères</b> passionnés par l'univers de la street-food. Notre mission ? Proposer à Montpellier des recettes généreuses avec des produits de qualité[cite: 77]. 
+                Que ce soit pour nos burgers signatures, nos tacos à composer ou nos sandwichs gourmands, nous mettons tout notre cœur pour vous régaler comme à la maison, mais avec la touche "Élite".
+            </p>
         </section>
 
-        <section id="order" style="background: #080808;">
+        <section id="order" style="background: #080808; text-align: center;">
             <div class="section-title">
                 <h2>Commander</h2>
                 <div></div>
             </div>
-            <p style="font-size: 1.2rem; margin-bottom: 2rem;">📞 Un petit creux ? Appelez-nous directement pour une préparation immédiate :</p>
-            <a href="tel:0745065470" style="font-size: 2.5rem; color: var(--primary); text-decoration: none; font-weight: 900;">
-                07 45 06 54 70 
+            <a href="tel:0745065470" style="font-size: 3rem; color: var(--primary); text-decoration: none; font-weight: 900; display: block; margin: 1rem 0;">
+                07 45 06 54 70
             </a>
-            <p style="margin-top: 2rem; color: #666;">📍 Livraison gratuite 7j/7 avec un minimum d'achat. [cite: 64]</p>
+            <p style="color: #888;">Livraison gratuite 7j/7 avec un minimum d'achat[cite: 64].</p>
+            <p style="color: #888; margin-top: 10px;">Ouvert de 11h-15h / 18h-23h (Sauf Vendredi soir uniquement)[cite: 63].</p>
         </section>
 
         <section id="menu">
@@ -114,42 +107,74 @@
                 <h2>Notre <span>Carte</span></h2>
                 <div></div>
             </div>
-            <div class="grid" id="burger-grid">
-                </div>
+
+            <div class="cat-title">Burgers Signature</div>
+            <div class="grid" id="burgers-grid"></div>
+
+            <div class="cat-title">Sandwichs & Américains</div>
+            <div class="grid" id="sandwiches-grid"></div>
+
+            <div class="cat-title">Tacos & Salades</div>
+            <div class="grid" id="tacos-grid"></div>
+
+            <div class="cat-title">Extras & Desserts</div>
+            <div class="grid" id="extras-grid"></div>
         </section>
 
-        <footer style="padding: 4rem 8%; text-align: center; color: #444; font-size: 0.8rem;">
+        <footer style="padding: 3rem; text-align: center; color: #444; font-size: 0.8rem; border-top: 1px solid #111;">
             <p>90 RUE DES BOUISSES, 34070 MONTPELLIER [cite: 77]</p>
-            <p>© 2026 Ô MAM'S - TOUS DROITS RÉSERVÉS</p>
+            <p style="margin-top:10px;">Ô MAM'S - VIANDE HALAL [cite: 65]</p>
         </footer>
     </main>
 
     <script>
-        // ICI ON METTRA LA LISTE QUE TU VAS ME DONNER
-        const menuComplet = [
-            { name: "Cheese Burger", price: "3,50€", img: "burger-1.jpg" },
-            { name: "Double Cheese", price: "4,50€", img: "burger-2.jpg" },
-            { name: "Triple Cheese", price: "5,50€", img: "burger-3.jpg" },
-            { name: "Le Big", price: "6,00€", img: "burger-4.jpg" },
-            { name: "Giant Maax", price: "6,00€", img: "burger-5.jpg" },
-            { name: "Le Giant", price: "5,00€", img: "burger-6.jpg" },
-            { name: "Le 180", price: "7,00€", img: "burger-7.jpg" },
-            { name: "Le 360", price: "9,00€", img: "burger-8.jpg" }
-        ];
+        const categories = {
+            burgers: [
+                { name: "Cheese Burger", price: "3,50€", img: "burger-1.jpg" },
+                { name: "Double Cheese", price: "4,50€", img: "burger-2.jpg" },
+                { name: "Triple Cheese", price: "5,50€", img: "burger-3.jpg" },
+                { name: "Le Big", price: "6,00€", img: "burger-4.jpg" },
+                { name: "Giant Maax", price: "6,00€", img: "burger-5.jpg" },
+                { name: "Le Giant", price: "5,00€", img: "burger-6.jpg" },
+                { name: "Le 180", price: "7,00€", img: "burger-7.jpg" },
+                { name: "Le 360", price: "9,00€", img: "burger-8.jpg" },
+                { name: "Chicken Maax", price: "12,90€", img: "burger-1.jpg" }
+            ],
+            sandwiches: [
+                { name: "Américain", price: "5,00€", img: "burger-4.jpg" },
+                { name: "Kebab", price: "6,50€", img: "burger-6.jpg" },
+                { name: "Maxxi Kebab", price: "8,00€", img: "burger-7.jpg" },
+                { name: "Spécial", price: "7,50€", img: "burger-2.jpg" }
+            ],
+            tacos: [
+                { name: "Tacos M (1 Viande)", price: "6,50€", img: "burger-5.jpg" },
+                { name: "Salade César", price: "8,00€", img: "burger-1.jpg" },
+                { name: "Salade Burrata", price: "10,00€", img: "burger-7.jpg" },
+                { name: "Wrap Chicken", price: "7,00€", img: "burger-3.jpg" }
+            ],
+            extras: [
+                { name: "Tenders (x4)", price: "5,00€", img: "burger-2.jpg" },
+                { name: "Nuggets (x4)", price: "3,90€", img: "burger-5.jpg" },
+                { name: "Tiramisu Oreo", price: "3,00€", img: "burger-8.jpg" }
+            ]
+        };
 
-        const grid = document.getElementById('burger-grid');
-        grid.innerHTML = menuComplet.map(item => `
-            <div class="card">
-                <div class="card-img"><img src="images/${item.img}" alt="${item.name}"></div>
-                <div class="card-info">
-                    <h3>${item.name}</h3>
-                    <div class="price-row">
-                        <span class="price">${item.price}</span>
-                        <div style="background:var(--primary); color:#000; padding:5px 10px; border-radius:5px; font-weight:bold; font-size:0.8rem;">VOIR</div>
+        const render = (id, data) => {
+            document.getElementById(id).innerHTML = data.map(i => `
+                <div class="card">
+                    <div class="card-img"><img src="images/${i.img}" alt="${i.name}"></div>
+                    <div class="card-info">
+                        <h3>${i.name}</h3>
+                        <span class="price">${i.price}</span>
                     </div>
                 </div>
-            </div>
-        `).join('');
+            `).join('');
+        };
+
+        render('burgers-grid', categories.burgers);
+        render('sandwiches-grid', categories.sandwiches);
+        render('tacos-grid', categories.tacos);
+        render('extras-grid', categories.extras);
     </script>
 </body>
 </html>
