--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ô MAM'S | Officiel</title>
+    <title>Ô MAM'S | Burgers & Street Food Montpellier</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -11,15 +11,15 @@
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Montserrat', sans-serif; background: var(--dark); color: var(--white); scroll-behavior: smooth; display: flex; }
 
-        /* NAVIGATION À GAUCHE */
+        /* NAVIGATION LATERALE */
         nav {
             width: 280px; height: 100vh; background: #000; position: fixed; 
-            left: 0; top: 0; padding: 2rem; border-right: 1px solid #222;
+            left: 0; top: 0; padding: 2.5rem 1.5rem; border-right: 1px solid #222;
             display: flex; flex-direction: column; z-index: 1000;
         }
-        .nav-logo { width: 100%; margin-bottom: 2rem; }
+        .nav-logo { width: 100%; margin-bottom: 2.5rem; border-radius: 10px; }
         .nav-links { list-style: none; flex-grow: 1; }
-        .nav-links li { margin-bottom: 1.5rem; }
+        .nav-links li { margin-bottom: 1.8rem; }
         .nav-links a { 
             color: #888; text-decoration: none; font-weight: 700; font-size: 1.1rem;
             transition: 0.3s; display: flex; align-items: center; gap: 15px;
@@ -32,32 +32,35 @@
             display: flex; align-items: center; justify-content: center; gap: 10px;
         }
 
-        /* CONTENU PRINCIPAL */
+        /* CONTENU */
         main { margin-left: 280px; width: calc(100% - 280px); }
+        section { padding: 6rem 8%; border-bottom: 1px solid #111; min-height: 100vh; display: flex; flex-direction: column; justify-content: center; }
+        .section-title { margin-bottom: 2.5rem; }
+        .section-title h2 { font-size: 2.8rem; text-transform: uppercase; font-weight: 900; }
+        .section-title span { color: var(--primary); }
+        .section-title div { width: 70px; height: 5px; background: var(--primary); margin-top: 10px; }
 
-        section { padding: 5rem 8%; border-bottom: 1px solid #111; min-height: 100vh; display: flex; flex-direction: column; justify-content: center; }
-        .section-title { margin-bottom: 2rem; }
-        .section-title h2 { font-size: 2.5rem; text-transform: uppercase; font-weight: 900; }
-        .section-title div { width: 60px; height: 4px; background: var(--primary); margin-top: 10px; }
-
-        /* GRID BURGERS */
-        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 20px; }
+        /* GRILLE BURGERS */
+        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(240px, 1fr)); gap: 25px; }
         .card { background: var(--card-bg); border-radius: 15px; overflow: hidden; border: 1px solid #222; }
-        .card-img { height: 180px; }
+        .card-img { height: 200px; }
         .card-img img { width: 100%; height: 100%; object-fit: cover; }
-        .card-info { padding: 1rem; text-align: center; }
-        .card-info h3 { font-size: 1rem; color: var(--primary); margin-bottom: 0.5rem; text-transform: uppercase; }
-        .price { font-size: 1.2rem; font-weight: 900; }
+        .card-info { padding: 1.2rem; text-align: center; }
+        .card-info h3 { font-size: 1.1rem; color: var(--primary); margin-bottom: 0.5rem; text-transform: uppercase; font-weight: 800; }
+        .price { font-size: 1.4rem; font-weight: 900; }
 
-        /* IMAGE CARTE */
-        .menu-pdf-img { width: 100%; max-width: 900px; border-radius: 10px; box-shadow: 0 0 30px rgba(130, 201, 30, 0.2); margin: 0 auto; }
+        /* SECTION CARTE (IMAGES DU MENU) */
+        .carte-container { width: 100%; max-width: 900px; margin: 0 auto; }
+        .carte-img { width: 100%; height: auto; border-radius: 15px; border: 2px solid #222; margin-bottom: 20px; display: block; }
 
+        /* RESPONSIVE MOBILE */
         @media (max-width: 1024px) {
             body { flex-direction: column; }
-            nav { width: 100%; height: auto; position: sticky; padding: 1rem; border-right: none; border-bottom: 1px solid #222; }
-            .nav-links { display: none; }
+            nav { width: 100%; height: auto; position: sticky; padding: 1rem; border-right: none; border-bottom: 1px solid #222; flex-direction: row; justify-content: space-between; align-items: center; }
+            .nav-logo { height: 50px; width: auto; margin-bottom: 0; }
+            .nav-links, .btn-nav-call { display: none; }
             main { margin-left: 0; width: 100%; }
-            section { min-height: auto; padding: 3rem 5%; }
+            section { min-height: auto; padding: 4rem 5%; }
         }
     </style>
 </head>
@@ -66,10 +69,10 @@
     <nav>
         <img src="images/logo-mams.pnj.jpg" alt="Ô MAM'S" class="nav-logo">
         <ul class="nav-links">
-            <li><a href="#about">Qui sommes-nous ?</a></li>
-            <li><a href="#burgers">Nos Burgers</a></li>
-            <li><a href="#carte">Ma Carte</a></li>
-            <li><a href="#order">Commander</a></li>
+            <li><a href="#about"><i class="fas fa-users"></i> Qui sommes-nous ?</a></li>
+            <li><a href="#burgers"><i class="fas fa-hamburger"></i> Nos Burgers</a></li>
+            <li><a href="#carte"><i class="fas fa-file-alt"></i> Ma Carte</a></li>
+            <li><a href="#order"><i class="fas fa-phone-alt"></i> Commander</a></li>
         </ul>
         <a href="tel:0745065470" class="btn-nav-call">
             <i class="fas fa-phone-alt"></i> 07 45 06 54 70
@@ -82,7 +85,7 @@
                 <h2>Qui <span>sommes-nous ?</span></h2>
                 <div></div>
             </div>
-            <p style="font-size: 1.2rem; line-height: 1.8; color: #ccc;">
+            <p style="font-size: 1.3rem; line-height: 1.8; color: #ccc; max-width: 800px;">
                 Nous sommes <b>deux frères</b> passionnés par la street food. Animés par l'envie de partager notre vision du burger parfait, nous avons ouvert <b>Ô MAM'S</b> pour offrir des produits généreux, frais et une ambiance familiale au cœur de Montpellier. Chaque recette est le fruit de notre complicité et de notre exigence.
             </p>
         </section>
@@ -95,23 +98,27 @@
             <div class="grid" id="burger-grid"></div>
         </section>
 
-        <section id="carte" style="background: #080808; text-align: center;">
+        <section id="carte" style="background: #080808;">
             <div class="section-title">
                 <h2>Ma <span>Carte</span></h2>
                 <div></div>
             </div>
-            <img src="images/burger-Double%20cheese.jpg" alt="Carte Complète" class="menu-pdf-img" style="opacity: 0.8; filter: grayscale(0.5);">
-            <p style="margin-top: 20px; color: #666;">Consultez notre menu complet sur place ou en livraison.</p>
+            <div class="carte-container">
+                <img src="images/menu-1.jpg" alt="Menu Face 1" class="carte-img">
+                <img src="images/menu-2.jpg" alt="Menu Face 2" class="carte-img">
+            </div>
         </section>
 
         <section id="order" style="text-align: center;">
-            <div class="section-title">
+            <div class="section-title" style="display: flex; flex-direction: column; align-items: center;">
                 <h2>Commander</h2>
                 <div></div>
             </div>
-            <p>Appelez-nous directement :</p>
-            <a href="tel:0745065470" style="font-size: 3rem; color: var(--primary); text-decoration: none; font-weight: 900;">07 45 06 54 70</a>
-            <p style="margin-top: 20px; color: #444;">90 RUE DES BOUISSES, 34070 MONTPELLIER</p>
+            <p style="font-size: 1.2rem; margin-bottom: 2rem;">Appelez-nous directement :</p>
+            <a href="tel:0745065470" style="font-size: clamp(2.5rem, 8vw, 4.5rem); color: var(--primary); text-decoration: none; font-weight: 900;">
+                07 45 06 54 70
+            </a>
+            <p style="margin-top: 3rem; color: #444; font-weight: 700;">90 RUE DES BOUISSES, 34070 MONTPELLIER</p>
         </section>
     </main>
 
@@ -120,11 +127,11 @@
             { name: "Cheese Burger", price: "3,50€", img: "burger-1.jpg" },
             { name: "Double Cheese Burger", price: "4,50€", img: "burger-2.jpg" },
             { name: "Triple Cheese Burger", price: "5,50€", img: "burger-3.jpg" },
-            { name: "Le Big", price: "6€", img: "burger-4.jpg" },
-            { name: "Le Giant Maax", price: "6€", img: "burger-5.jpg" },
-            { name: "Le Giant", price: "5€", img: "burger-6.jpg" },
-            { name: "Le 180", price: "7€", img: "burger-7.jpg" },
-            { name: "Le 360", price: "9€", img: "burger-8.jpg" }
+            { name: "Le Big", price: "6,00€", img: "burger-4.jpg" },
+            { name: "Le Giant Maax", price: "6,00€", img: "burger-5.jpg" },
+            { name: "Le Giant", price: "5,00€", img: "burger-6.jpg" },
+            { name: "Le 180", price: "7,00€", img: "burger-7.jpg" },
+            { name: "Le 360", price: "9,00€", img: "burger-8.jpg" }
         ];
 
         document.getElementById('burger-grid').innerHTML = burgers.map(b => `
